--- a/WMC/Caffe Holzbar/Css/theme-light.css
+++ b/WMC/Caffe Holzbar/Css/theme-light.css
@@ -114,13 +114,15 @@ textarea{
 button{
     border-radius: 10px;
 }
-footer{
+
+#foot{
+    display: flex;
+    align-items: center;
+    flex-direction:column;
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 125%;
-    height: 70px;
     background: beige;
+    width: 115%;
     margin: -70;
 }
 
