--- a/WMC/Name/CSS/stylesheet.css
+++ b/WMC/Name/CSS/stylesheet.css
@@ -118,8 +118,11 @@ nav ul{
     display: grid;
     grid-template-columns: 25% 50% 25%;
 }
-nav ul li:nth-child(2){
+nav ul li:nth-child(3){
     grid-column: 3/4;
+}
+nav ul li:nth-child(2){
+    grid-column: 1/2;
 }
 nav ul li:nth-child(1){
     grid-column: 1/2;
@@ -179,6 +182,10 @@ nav ul li a[href="./index.html"]{
 }
 #velociraptor{
     margin-top: 20px;
+}
+input{
+    border-radius: 5px;
+    background-color: #4CAF50;
 }
 /*media querys*/
 @media(max-width: 900px){
